--- a/adma_geo/templates/base.html
+++ b/adma_geo/templates/base.html
@@ -268,11 +268,16 @@
                             <i class="fas fa-home me-1"></i>Home
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'filemanager:documentation' %}">
-                            <i class="fas fa-book me-1"></i>Documentation
-                        </a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'filemanager:search' %}">
+                                <i class="fas fa-search me-1"></i>Search
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'filemanager:documentation' %}">
+                                <i class="fas fa-book me-1"></i>Documentation
+                            </a>
+                        </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'filemanager:dashboard' %}">
